# default-test-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: hello.rs
src/: lib.rs
