[package]
name = "default-test"
version = "0.1.1"
description = "A default trait that can be used in tests"
keywords = ["default", "tests"]
categories = ["rust-patterns"]
authors = ["Austin Jones <implAustin@gmail.com>"]
edition = "2018"
homepage = "https://github.com/austinjones/default-test-rs"
repository = "https://github.com/austinjones/default-test-rs"
license = "MIT"
readme = "README.md"

[[example]]
name = "hello"